# robothand

./: README.md  fixed_thesis_test-steps
CAD/STL/: fingerbase.stl  fingermiddle.stl  fingertip.stl  handassembly_NOTFORPRINTING.stl  palm.stl
ROSServo/: ROSServo.ino
back_and_forth_publish/: back_and_forth_publish.ino
devel/include/jointpublish/: Hand.h
jointpublish/: CMakeLists.txt  RobotHand.launch  package.xml
jointpublish/msg/: Hand.msg
jointpublish/scripts/: joint_publish_test.py
jointpublish/src/: jointpublish.py
servocontrol/: servocontrol.ino
trash_from_ubuntu_boot/: jointpublish.py
trash_from_ubuntu_boot/back_and_forth_publish/: back_and_forth_publish.ino
