<?xml version="1.0"?>
<package format="2">
  <name>jointpublish</name>
  <version>0.0.0</version>
  <description>Publisher for ROSSerial joint state message to robot hand, using an Arduino Uno</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <maintainer email="charles.delorey@tufts.edu"></maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <author email="charles.delorey@tufts.edu">Charles DeLorey</author>

    <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
    <build_depend>python_serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>rosserial_python</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
    <exec_depend>rosserial_python</exec_depend>
  <exec_depend>message_runtime</exec_depend>

    <build_export_depend>python-serial</build_export_depend>
    <exec_depend>python-serial</exec_depend>

</package>
